bin_PROGRAMS = coolfs
coolfs_SOURCES = coolfs.c \
                 log/log.c log/log.h \
                 constants.h \
                 path.c path.h \
                 bitmap.c bitmap.h \
                 fuseimpl.c fuseimpl.h \
                 fs.c fs.h \
                 block.h \
                 inode.c inode.h
